# axum-web-gcp

./: Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: main.rs  models.rs  state.rs
src/firestore/: client.rs  mod.rs  operations.rs
src/handlers/: health_handler.rs  mod.rs  order_handler.rs
src/routes/: health.rs  init.rs  mod.rs  orders.rs
