[package]
name = "axum-web-gcp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = {  version = "0.3.18", features = ["fmt", "json"] }
hyper = "1.4.1"
serde_json = "1.0.122"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
firestore = "0.43.0"
dotenv = "0.15.0"
tracing = "0.1.40"
futures = "0.3.30"
tokio-stream = "0.1.15"
